virtual-portfolio/deployments/staging/api.yaml
apiVersion: v1
kind: Service
metadata:
  name: micro-api
  labels:
    app: micro-api
    tier: micro-api
spec:
  type: LoadBalancer
  ports:
  - port: 80
    name: http
    targetPort: target-port
  selector:
    app: micro-api
    tier: micro-api
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: micro-api
  labels:
    app: micro-api
    tier: micro-api
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: micro-api
        tier: micro-api
    spec:
      serviceAccountName: micro
      containers:
      - name: micro-api
        image: eu.gcr.io/kytra-app/micro-api:healthcheck-0.1.0
        imagePullPolicy: Always
        args: 
          - api
        ports:
        - name: target-port
          containerPort: 8080
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
