virtual-portfolio/deployments/staging/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: staging-ingress
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - kytra.app
    secretName: kytra-tls
  rules:
  - host: staging.kytra.app
    http:
      paths:
      - backend:
          serviceName: frontend
          servicePort: 80
  - host: staging-api.kytra.app
    http:
      paths:
      - backend:
          serviceName: micro-api
          servicePort: 80
